# cpr_indoornav-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  backpack-install.sh  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
cpr_indoornav/: CHANGELOG.rst  CMakeLists.txt  package.xml
cpr_indoornav/launch/: indoornav_bringup.launch  indoornav_bringup_remote.launch  jackal_indoornav.launch  ridgeback_indoornav.launch
cpr_indoornav/scripts/: dingo_power_monitor  husky_power_monitor  install  jackal_power_monitor  ridgeback_power_monitor
cpr_indoornav_msgs/: CHANGELOG.rst  package.xml
cpr_indoornav_tests/: CMakeLists.txt
cpr_indoornav_tests/scripts/: all-tests  network-tests  ros-tests
debian/: changelog  control  gbp.conf  rules
launch/: dingo_indoornav.launch  husky_indoornav.launch
msg/: BatteryState.msg
scripts/: husky_power_monitor  indoornav_bringup  setup
